# automatedTesting

./: .gitignore  pyproject.toml
.github/workflows/: publish.yaml  test.yml
