[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto_testing_ice"
version = "0.0.2"
authors = [
  { name="Christina Elisabeth Isra", email="author@example.com" },
]
description = "A small example package for testing"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["pandas"]

[project.urls]
"Homepage" = "https://github.com/IsraMekki0/automatedTesting/tree/main"
"Bug Tracker" = "https://github.com/IsraMekki0/automatedTesting/tree/main"
